[2022-46] Refactored the normalize function, added lines to rename columns in the notebooks of KSW 2019 and Hisrlanden Zurich 2019.

--- a/src/revised_case_normalization/Hirslanden_Zürich_2019_normalization.ipynb
+++ b/src/revised_case_normalization/Hirslanden_Zürich_2019_normalization.ipynb
@@ -82,8 +82,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-14 09:47:59.830 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:35 - Read 155 cases for Hirslanden Zurich 2019\n",
-      "2022-11-14 09:47:59.836 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:63 - TYPES:\n",
+      "2022-11-15 14:26:24.773 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:35 - Read 155 cases for Hirslanden Zurich 2019\n",
+      "2022-11-15 14:26:24.777 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:62 - 77/155 rows were deleted because contained NaNs\n",
+      "2022-11-15 14:26:24.779 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:74 - TYPES:\n",
       "datum abgabe               string\n",
       "case_id                    object\n",
       "patient_id                 object\n",
@@ -115,15 +116,14 @@
       "gegenargumentation dtod    string\n",
       "case_id_norm               object\n",
       "dtype: object\n",
-      "2022-11-14 09:47:59.837 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:72 - 77/155 rows were deleted because contained NaNs\n",
-      "2022-11-14 09:47:59.844 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
-      "2022-11-14 09:47:59.848 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
-      "2022-11-14 09:47:59.852 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
-      "2022-11-14 09:47:59.857 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
-      "2022-11-14 09:47:59.857 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
-      "2022-11-14 09:47:59.866 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:158 - Validated redundant PD info in 'added_icds'/'removed_icds': All rows contain valid codes\n",
-      "2022-11-14 09:47:59.868 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:108 - Removed 46 rows containing duplicates\n",
-      "2022-11-14 09:47:59.869 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:110 - Completed validation\n"
+      "2022-11-15 14:26:24.785 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'added_icds' and stored them into 'added_icds': All rows contain valid codes\n",
+      "2022-11-15 14:26:24.790 | INFO     | src.utils.dataframe_utils:validate_icd_codes:68 - Validated ICD codes in 'removed_icds' and stored them into 'removed_icds': All rows contain valid codes\n",
+      "2022-11-15 14:26:24.794 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'added_chops' and stored them into 'added_chops': All rows contain valid codes\n",
+      "2022-11-15 14:26:24.799 | INFO     | src.utils.dataframe_utils:validate_chop_codes:106 - Validated CHOP codes in 'removed_chops' and stored them into 'removed_chops': All rows contain valid codes\n",
+      "2022-11-15 14:26:24.799 | INFO     | src.utils.dataframe_utils:remove_duplicated_chops:32 - Removing duplicated CHOP codes due to different casing ...\n",
+      "2022-11-15 14:26:24.807 | INFO     | src.utils.dataframe_utils:validate_pd_revised_sd:158 - Validated redundant PD info in 'added_icds'/'removed_icds': All rows contain valid codes\n",
+      "2022-11-15 14:26:24.810 | INFO     | src.revised_case_normalization.notebook_functions.normalize:normalize:110 - Removed 46 rows containing duplicates\n",
+      "2022-11-15 14:26:24.811 | SUCCESS  | src.revised_case_normalization.notebook_functions.normalize:normalize:112 - Completed validation\n"
      ]
     },
     {
@@ -787,7 +787,11 @@
     }
    ],
    "source": [
-    "revised_cases_df = normalize(file_info)\n",
+    "columns_to_rename = dict(COLUMNS_TO_RENAME)\n",
+    "columns_to_rename.pop(\"admno\")\n",
+    "columns_to_rename['fall nummer'] = CASE_ID_COL\n",
+    "\n",
+    "revised_cases_df = normalize(file_info, columns_mapper = columns_to_rename)\n",
     "revised_cases_df"
    ]
   },
@@ -811,7 +815,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-14 09:48:03.657 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:90 - Read 15113 rows from the DB, for the hospital 'Hirslanden Zurich' in 2019\n"
+      "2022-11-15 14:26:26.885 | INFO     | src.service.bfs_cases_db_service:get_sociodemographics_for_hospital_year:90 - Read 15113 rows from the DB, for the hospital 'Hirslanden Zurich' in 2019\n"
      ]
     },
     {
@@ -879,8 +883,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-14 09:48:04.029 | INFO     | src.revised_case_normalization.notebook_functions.group:group:83 - Grouping 32 cases ...\n",
-      "2022-11-14 09:48:05.006 | SUCCESS  | src.revised_case_normalization.notebook_functions.group:group:88 - Grouped 32 cases into: 32 revisions, 314 diagnoses rows, 247 procedure rows\n"
+      "2022-11-15 14:26:27.390 | INFO     | src.revised_case_normalization.notebook_functions.group:group:83 - Grouping 32 cases ...\n",
+      "2022-11-15 14:26:28.525 | SUCCESS  | src.revised_case_normalization.notebook_functions.group:group:88 - Grouped 32 cases into: 32 revisions, 314 diagnoses rows, 247 procedure rows\n"
      ]
     }
    ],
@@ -1282,13 +1286,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-11-14 09:48:05.024 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:249 - Trying to insert 32 cases into the 'Revisions' table ...\n",
-      "2022-11-14 09:48:05.619 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:275 - Deleted 32 rows from the \"Revisions\" table, which is about to be updated\n",
-      "2022-11-14 09:48:05.710 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:286 - Inserted 32 cases into the 'Revisions' table\n",
-      "2022-11-14 09:48:05.715 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:298 - Trying to insert 314 rows into the 'Diagnoses' table ...\n",
-      "2022-11-14 09:48:07.102 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:336 - Inserted 314 rows into the 'Diagnoses' table\n",
-      "2022-11-14 09:48:07.106 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:347 - Trying to insert 247 rows into the 'Procedures' table ...\n",
-      "2022-11-14 09:48:07.761 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:393 - Inserted 247 rows into the 'Procedures' table\n"
+      "2022-11-15 14:26:28.545 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:249 - Trying to insert 32 cases into the 'Revisions' table ...\n",
+      "2022-11-15 14:26:30.214 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:275 - Deleted 32 rows from the \"Revisions\" table, which is about to be updated\n",
+      "2022-11-15 14:26:30.536 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_revisions:286 - Inserted 32 cases into the 'Revisions' table\n",
+      "2022-11-15 14:26:30.539 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:298 - Trying to insert 314 rows into the 'Diagnoses' table ...\n",
+      "2022-11-15 14:26:32.232 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_diagnoses:336 - Inserted 314 rows into the 'Diagnoses' table\n",
+      "2022-11-15 14:26:32.237 | INFO     | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:347 - Trying to insert 247 rows into the 'Procedures' table ...\n",
+      "2022-11-15 14:26:33.357 | SUCCESS  | src.service.bfs_cases_db_service:insert_revised_cases_into_procedures:393 - Inserted 247 rows into the 'Procedures' table\n"
      ]
     }
    ],
